fix header on iPhone SE

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,3 +1,12 @@
+@media screen and (max-width: 400px) {
+  .bp3-large {
+    min-width: 30px !important;
+    min-height: 30px !important;
+    padding: 5px 10px !important;
+    font-size: 14px !important;
+  }
+}
+
 .Header {
   flex: 0 0 auto;
   color: white;
@@ -27,7 +36,7 @@
 
       @media screen and (max-width: 400px) {
         .current-date {
-          font-size: .7rem;
+          font-size: 0.7rem;
         }
       }
     }
